# MyOpenGL

./: .gitignore
Assimp_windows-x64-v6.0.5/Release/: assimp-vc143-mt.lib
Assimp_windows-x64-v6.0.5/include/assimp/: revision.h
MyOpenGL1/: CMakeLists.txt  Generate_VS2022.bat
MyOpenGL1/include/: Shader.h
MyOpenGL1/src/: Shader.cpp  glad.c  main.cpp
MyOpenGL_Lighting/: CMakeLists.txt  Generate_VS2022.bat
MyOpenGL_Lighting/include/: Camera.h  Mesh.h  Model.h  Shader.h
MyOpenGL_Lighting/include/glad/: glad.h
MyOpenGL_Lighting/shaders/: cube.fs  cube.vs  light.fs  light.vs  lightCube.fs  lighting.fs  lighting.vs  model_loading.fs
MyOpenGL_Lighting/src/: Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
